# ai-work-container

./: .gitignore  CLAUDE.md  CODEOWNERS  README.md  ai-work-container.code-workspace  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json
.claude/: settings.json  settings.json.backup
.claude/agents/: code-reviewer.md  doc-writer.md  plan-creator.md  pr-reviewer.md
.claude/commands/: commit.md  doc.md  plan.md  review-plan.md  review.md  suggest-claude-md.md
.claude/hooks/: PreCompact.md  SessionEnd.md  auto-approve-docs.sh  post-review.sh  session-start.sh
.devcontainer/: Dockerfile  README.md  backup-devcontainer.sh  devcontainer.json  docker-compose.yml  fix-workspaces-permission.sh  init-project.sh  init-tmp-volume.sh  post-create.sh  remove-repo-project.sh  rollback-devcontainer.sh  setup-claude-mcp.sh  setup-project-links.sh  setup-repo-project.sh  setup-tmp-symlinks.sh
.devcontainer/backup/: Dockerfile.20251213_023148.bak  post-create.sh.20251213_023148.bak
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.serena/: project.yml
data/: tool-search-gold.jsonl
docs/: beta-spec-verification.md  claude-code-customization.md  claude-code-mcp-setup.md  claude-code-sdk.md  claude-code-usage.md  devcontainer-git-loading-issue.md  github-copilot-auto-approve.md  github-mcp.md  multi-project-setup.md  multiroot-workspace-usage.md  serena-setup.md
examples/: tool-search-basic-bm25.ts  tool-search-basic-regex.py
scripts/: mock-tools.json  validate-gold-dataset.py  validate-skills.sh
(+114 files in other folders)
